# zkp-service

./: .gitignore  ARCHITECTURE.md  BACKEND_X402_INTEGRATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  README.md  TESTING.md  X402_FIX_SUMMARY.md  package-lock.json  package.json
runtime/: .gitignore  Cargo.toml  Dockerfile  compose.yaml  rofl.yaml
runtime/src/: errors.rs  main.rs  service.rs  types.rs
