[package]
author = "protocolwhisper"
name = "zkpruntime"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
uuid = { version = "1.18", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.12.24"
num_cpus = "1.0"
